--- a/Edu/Education.html
+++ b/Edu/Education.html
@@ -10,6 +10,9 @@
     <div id="minicircle"></div>
     <div class="Eduaction">
         <div class="nav">
+            <div class="home">
+                <a href="../index.html">Home</a>
+            </div>
             <h2 class="text">Shubhneet Kumar</h2>
         </div>
         <div class="main">
@@ -18,8 +21,8 @@
             </div>
             <div class="content">
                 <div class="c1">
-                    <p>GLA UNiversity, Mathura Uttar Pradesh, 05/2024<br>
-                        BACHELOR OF TECHNOLOGY COMPUTER ENGINEERING</p>
+                    <p>GLA University, Mathura Uttar Pradesh, 05/2024<br>
+                        Bachelor of Technology in Computer Science Engineering</p>
                 </div>
                 <div class="c2">
                     <p>Shantiniketan World School, Aligarh Uttar Pradesh, 03/2020 <br>
